--- a/docker/web/000-default.conf
+++ b/docker/web/000-default.conf
@@ -2,6 +2,8 @@
     ServerAdmin webmaster@localhost
 
     SetEnv APP_ENV ${APP_ENV}
+    SetEnv NEO4J_AUTH_USERNAME ${NEO4J_AUTH_USERNAME}
+    SetEnv NEO4J_AUTH_PASSWORD ${NEO4J_AUTH_PASSWORD}
 
     DocumentRoot /var/www/symfony/public
     <Directory /var/www/symfony/public>
