--- a/symfony/config/services.yaml
+++ b/symfony/config/services.yaml
@@ -4,8 +4,6 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    env(MONGODB_URL): ''
-    env(MONGODB_DB): ''
 
 services:
     # default configuration for services in *this* file
@@ -30,3 +28,10 @@ services:
     App\Connection\SamConnection:
         arguments: 
             - '@eight_points_guzzle.client.sam_client'
+            
+    elastic.search:
+        class: Elastica\Client
+        arguments:
+            - { host: search, port: 9200 }
+
+    Elastica\Client: '@elastic.search'
